--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "expo-status-bar": "~1.4.0",
     "react": "18.0.0",
     "react-native": "0.69.4",
-    "react-native-config": "^1.4.6"
+    "react-native-config": "^1.4.6",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
